--- a/generate-quote/src/App.css
+++ b/generate-quote/src/App.css
@@ -1,50 +1,53 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster&display=swap");
 .App {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  text-align: center;
-}
-
-.quote {
+  max-width: 1000px;
+  height: 20vh;
+  margin: auto;
+  margin-top: 10em;
   background: #007991;
   background: -webkit-linear-gradient(to right, #78ffd6, #007991);
   background: linear-gradient(to right, #78ffd6, #007991);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 50px;
+  padding: 30px 40px;
+  position: relative;
+  border-radius: 30%;
+}
+
+.quote {
+  height: 100%;
+  background: #007991;
+  background: -webkit-linear-gradient(to right, #78ffd6, #007991);
+  background: linear-gradient(to right, #78ffd6, #007991); 
+  border-radius: 15%;
+  text-align: center;
+  margin: 1em;
 }
 .quote h2 {
   font-size: 1.5em;
-  font-family: "Lobster", cursive;
+  font-family: "Lobster", cursive
 }
 .quote small {
   font-size: 1.5em;
   font-family: "Dancing Script", cursive;
+  margin: 2em;
 }
 .btn {
+  position: fixed;
   display: block;
-  margin-left: auto;
-  margin-top: 2em;
-  margin-right: 3em;
+  margin-top: 1em;
   border: none;
-  background: #fff;
-  padding: 10px;
+  padding: 10px 30px;
   color: #14dada;
   font-size: 20px;
   font-weight: bold;
   border-radius: 6px;
   cursor: pointer;
   outline: none;
-  transition: background 1s, color 1s;
-}
-.btn:hover {
   background: #024247;
   color: #fff;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.btn:hover {
+  transition: background 1s, color 1s;
+  background: #fff;
+  color:#024247;
 }
